Web gui demo and explanation

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dental Decay Detection</title>
+    <!-- Import Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Import Font Awesome for GitHub icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Import Materialize JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <style>
         .container {
             max-width: 50%;
@@ -102,5 +107,20 @@
             });
         });
     </script>
+<!--    <footer class="page-footer grey lighten-4">-->
+<!--      <div class="container">-->
+<!--        <div class="row">-->
+<!--          <div class="col s12">-->
+<!--            <div class="center-align">-->
+<!--              <a href="https://github.com/monajemia/dental_decay_detection/" target="_blank" class="grey-text text-darken-2">-->
+<!--                &lt;!&ndash; GitHub icon from Font Awesome &ndash;&gt;-->
+<!--                <i class="fa fa-github" aria-hidden="true"></i>-->
+<!--                <span class="text">monajemi-arman</span>-->
+<!--              </a>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </footer>-->
 </body>
 </html>
